# MyAddressBook

./: .gitignore  README.md  app.py  pyproject.toml
pages/: main.py
utils/: chain_local_llm.py  database.py  extraction_local_llm.py  extraction_spacy.py  session_state.py
